--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
     "name": "@diworkfe/public-components",
+    "version": "0.1.0",
+    "description": "diwork fe public components",
+    "author": "zhengxingcheng <xingcheng.zheng@gmail.com>",
+    "private": true,
     "main": "./build/index"
 }
