--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "description": "diwork fe public components",
     "author": "zhengxingcheng <xingcheng.zheng@gmail.com>",
     "private": true,
-    "main": "./build"
+    "files": [
+      "build"
+    ],
+    "main": "./build/index.js"
 }
