--- a/package.json
+++ b/package.json
@@ -4,8 +4,23 @@
     "description": "diwork fe public components",
     "author": "zhengxingcheng <xingcheng.zheng@gmail.com>",
     "private": true,
-    "files": [
-      "build"
-    ],
+    "scripts": {
+      "build": "node scripts/build.js"
+    },
+    "devDependencies": {
+      "rimraf": "^2.6.2",
+      "ora": "^1.3.0",
+      "babel-core": "^6.26.0",
+      "babel-preset-env": "^1.6.1",
+      "babel-preset-react": "^6.24.1",
+      "babel-preset-stage-2": "^6.24.1",
+      "babel-plugin-add-module-exports": "^0.2.1",
+      "babel-plugin-css-modules-transform": "^1.4.0",
+      "babel-plugin-transform-object-rest-spread": "^6.26.0",
+      "babel-preset-es2015-ie": "^6.7.0",
+      "gulp": "^3.9.1",
+      "gulp-babel": "^7.0.1",
+      "gulp-es3ify": "0.0.1"
+    },
     "main": "./build"
 }
