--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "scripts": {
       "build": "node scripts/build.js"
     },
+    "dependencies":{
+      "bee-pagination": "1.0.2"
+    },
     "devDependencies": {
       "rimraf": "^2.6.2",
       "ora": "^1.3.0",
