--- a/package.json
+++ b/package.json
@@ -1,29 +1,33 @@
 {
-    "name": "@diworkfe/public-components",
-    "version": "0.0.1",
-    "description": "diwork fe public components",
-    "author": "zhengxingcheng <xingcheng.zheng@gmail.com>",
-    "private": true,
-    "scripts": {
-      "build": "node scripts/build.js"
-    },
-    "dependencies":{
-      "bee-pagination": "1.0.2"
-    },
-    "devDependencies": {
-      "rimraf": "^2.6.2",
-      "ora": "^1.3.0",
-      "babel-core": "^6.26.0",
-      "babel-preset-env": "^1.6.1",
-      "babel-preset-react": "^6.24.1",
-      "babel-preset-stage-2": "^6.24.1",
-      "babel-plugin-add-module-exports": "^0.2.1",
-      "babel-plugin-css-modules-transform": "^1.4.0",
-      "babel-plugin-transform-object-rest-spread": "^6.26.0",
-      "babel-preset-es2015-ie": "^6.7.0",
-      "gulp": "^3.9.1",
-      "gulp-babel": "^7.0.1",
-      "gulp-es3ify": "0.0.1"
-    },
-    "main": "./build"
+  "name": "@diworkfe/public-components",
+  "version": "0.0.1",
+  "description": "diwork fe public components",
+  "author": "zhengxingcheng <xingcheng.zheng@gmail.com>",
+  "private": true,
+  "scripts": {
+    "build": "node scripts/build.js"
+  },
+  "dependencies": {
+    "bee-pagination": "1.0.2",
+    "prop-types": "15.6.0",
+    "react": "15.6.2",
+    "react-dom": "15.6.2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-css-modules-transform": "^1.4.0",
+    "babel-plugin-module-alias": "^1.6.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015-ie": "^6.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.1",
+    "gulp-es3ify": "0.0.1",
+    "ora": "^1.3.0",
+    "rimraf": "^2.6.2"
+  },
+  "main": "./build"
 }
