--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bee-button": "1.0.2",
     "bee-checkbox": "1.0.1",
     "bee-icon": "1.0.4",
+    "bee-form-control": "1.0.4",
     "prop-types": "15.6.0",
     "react": "15.6.2",
     "react-dom": "15.6.2"
