--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bee-checkbox": "1.0.1",
     "bee-icon": "1.0.4",
     "bee-form-control": "1.0.4",
+    "bee-radio": "1.0.3",
     "prop-types": "15.6.0",
     "react": "15.6.2",
     "react-dom": "15.6.2"
