--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prop-types": "15.6.0",
     "react": "15.6.2",
     "react-dom": "15.6.2",
+    "react-router-dom": "4.2.2",
     "redux-actions": "2.2.1"
   },
   "devDependencies": {
