--- a/package.json
+++ b/package.json
@@ -11,6 +11,16 @@
     "bee-pagination": "1.0.2",
     "bee-rate":"1.0.1",
     "bee-button": "1.0.2",
+    "bee-breadcrumb": "1.0.0",
+    "bee-button-group": "1.0.0",
+    "bee-city-select": "1.0.6",
+    "bee-dropdown": "1.0.1",
+    "bee-form": "1.1.9",
+    "bee-loading": "1.0.2",
+    "bee-menus": "1.0.2",
+    "bee-message": "1.0.4",
+    "bee-select": "1.0.4",
+    "bee-tabs": "1.0.5",
     "bee-checkbox": "1.0.1",
     "bee-icon": "1.0.4",
     "bee-form-control": "1.0.4",
