--- a/package.json
+++ b/package.json
@@ -8,25 +8,29 @@
     "build": "node scripts/build.js"
   },
   "dependencies": {
-    "bee-pagination": "1.0.2",
-    "bee-rate":"1.0.1",
-    "bee-button": "1.0.2",
+    "bee-autocomplete": "1.0.1",
     "bee-breadcrumb": "1.0.0",
+    "bee-button": "1.0.2",
     "bee-button-group": "1.0.0",
+    "bee-checkbox": "1.0.1",
     "bee-city-select": "1.0.6",
     "bee-dropdown": "1.0.1",
     "bee-form": "1.1.9",
+    "bee-form-control": "1.0.4",
+    "bee-icon": "1.0.4",
+    "bee-input-group": "1.0.5",
     "bee-loading": "1.0.2",
     "bee-menus": "1.0.2",
     "bee-message": "1.0.4",
-    "bee-select": "1.0.4",
-    "bee-tabs": "1.0.5",
-    "bee-checkbox": "1.0.1",
-    "bee-icon": "1.0.4",
-    "bee-form-control": "1.0.4",
-    "bee-radio": "1.0.3",
     "bee-modal": "1.0.2",
     "bee-notification": "1.0.2",
+    "bee-pagination": "1.0.2",
+    "bee-radio": "1.0.3",
+    "bee-rate": "1.0.1",
+    "bee-select": "1.0.4",
+    "bee-switch": "1.0.3",
+    "bee-table": "1.0.6",
+    "bee-tabs": "1.0.5",
     "prop-types": "15.6.0",
     "react": "15.6.2",
     "react-dom": "15.6.2",
