--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bee-switch": "1.0.3",
     "bee-table": "1.0.6",
     "bee-tabs": "1.0.5",
+    "bee-tree": "1.0.5",
     "prop-types": "15.6.0",
     "react": "15.6.2",
     "react-dom": "15.6.2",
