--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bee-modal": "1.0.2",
     "bee-notification": "1.0.2",
     "bee-pagination": "1.0.2",
+    "bee-progress-bar": "^1.0.5",
     "bee-radio": "1.0.3",
     "bee-rate": "1.0.1",
     "bee-select": "1.0.4",
