--- a/package.json
+++ b/package.json
@@ -37,7 +37,11 @@
     "react": "15.6.2",
     "react-dom": "15.6.2",
     "react-router-dom": "4.2.2",
-    "redux-actions": "2.2.1"
+    "redux-actions": "2.2.1",
+    "react-dnd-html5-backend": "2.5.4",
+    "mutation-observer": "1.0.3",
+    "react-transition-group": "1.2.1",
+    "react-dnd": "2.5.4"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
