更新了bee-city-select版本 支持多语

--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "bee-button": "1.0.2",
     "bee-button-group": "1.0.0",
     "bee-checkbox": "1.0.1",
-    "bee-city-select": "1.0.6",
     "bee-dropdown": "1.0.1",
     "bee-form": "1.1.9",
+    "bee-city-select": "1.0.8",
     "bee-form-control": "1.0.4",
     "bee-icon": "1.0.4",
     "bee-input-group": "1.0.5",
@@ -32,17 +32,17 @@
     "bee-switch": "1.0.3",
     "bee-table": "1.0.6",
     "bee-tabs": "1.0.5",
-    "bee-tree": "1.0.5",
     "bee-tooltip": "1.0.7",
+    "bee-tree": "1.0.5",
+    "mutation-observer": "1.0.3",
     "prop-types": "15.6.0",
     "react": "15.6.2",
+    "react-dnd": "2.5.4",
+    "react-dnd-html5-backend": "2.5.4",
     "react-dom": "15.6.2",
     "react-router-dom": "4.2.2",
-    "redux-actions": "2.2.1",
-    "react-dnd-html5-backend": "2.5.4",
-    "mutation-observer": "1.0.3",
     "react-transition-group": "1.2.1",
-    "react-dnd": "2.5.4"
+    "redux-actions": "2.2.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
