--- a/package.json
+++ b/package.json
@@ -61,5 +61,10 @@
     "ora": "^1.3.0",
     "rimraf": "^2.6.2"
   },
+  "peerDependencies": {
+    "react": ">=15.6.2",
+    "react-dom": ">=15.4.2",
+    "react-redux": ">=5.0.2"
+  },
   "main": "./build"
 }
