--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bee-button-group": "1.0.0",
     "bee-checkbox": "1.0.1",
     "bee-city-select": "1.0.10",
+    "bee-collapse": "1.0.2",
     "bee-dropdown": "1.0.1",
     "bee-form": "2.0.7",
     "bee-form-control": "1.0.4",
