--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "bee-dropdown": "1.0.1",
     "bee-form": "2.0.7",
     "bee-form-control": "1.0.4",
-    "bee-icon": "1.0.4",
+    "bee-icon": "^1.0.11",
     "bee-input-group": "1.0.5",
     "bee-loading": "1.0.2",
     "bee-menus": "1.0.2",
