--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bee-checkbox": "1.0.1",
     "bee-city-select": "1.0.10",
     "bee-collapse": "1.0.2",
+    "bee-colorpicker": "0.0.13",
     "bee-dropdown": "1.0.1",
     "bee-form": "2.0.7",
     "bee-form-control": "1.0.4",
