--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "zhengxingcheng <xingcheng.zheng@gmail.com>",
   "private": true,
   "scripts": {
-    "build": "node scripts/build.js"
+    "build": "gulp build" 
+
   },
   "dependencies": {
     "bee-autocomplete": "1.0.1",
@@ -54,7 +55,7 @@
     "babel-preset-es2015-ie": "^6.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-babel": "^7.0.1",
     "gulp-es3ify": "0.0.1",
     "ora": "^1.3.0",
@@ -66,5 +67,5 @@
     "react-dom": ">=15.4.2",
     "react-redux": ">=5.0.2"
   },
-  "main": "./build"
+  "main": "./gulpfile"
 }
