--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
   "peerDependencies": {
     "react": ">=15.6.2",
     "react-dom": ">=15.4.2",
-    "react-redux": ">=5.0.2"
+    "react-redux": ">=5.0.2",
+    "tinper-bee": "^2.3.5"
   },
   "main": "./gulpfile"
 }
