--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "@diworkfe/public-components",
+  "name": "diworkpub",
   "version": "0.0.1",
   "description": "diwork fe public components",
   "author": "zhengxingcheng <xingcheng.zheng@gmail.com>",
-  "private": true,
+  "private": false,
   "scripts": {
     "build": "gulp build"
   },
+  "bundleDependencies": false,
   "dependencies": {
     "bee-autocomplete": "1.0.1",
     "bee-breadcrumb": "1.0.0",
@@ -65,7 +66,15 @@
     "react": ">=15.6.2",
     "react-dom": ">=15.4.2",
     "react-redux": ">=5.0.2",
-    "tinper-bee": "^2.3.5"
   },
-  "main": "./gulpfile"
+  "main": "./gulpfile",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gitshuang/diworkPub.git"
+  },
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/gitshuang/diworkPub/issues"
+  },
+  "homepage": "https://github.com/gitshuang/diworkPub#readme"
 }
